--- a/.yabairc
+++ b/.yabairc
@@ -35,12 +35,14 @@ yabai -m rule --add app="^Logi Options$" manage=off
 yabai -m rule --add app="^Cisco Webex Start$" manage=off
 yabai -m rule --add app="^Private Internet Access$" manage=off
 yabai -m rule --add app="^微信$" manage=off
+yabai -m rule --add app="^WeChat$" manage=off
 yabai -m rule --add app="^Focus To-Do$" manage=off
 yabai -m rule --add app="^网易云音乐$" manage=off
 yabai -m rule --add app="^Music$" manage=off
 yabai -m rule --add app="^iTerm2$" manage=off
 yabai -m rule --add app="^VirtualBox VM$" manage=off
 yabai -m rule --add app="^Digital Colour Meter$" manage=off
+yabai -m rule --add app="^系统偏好设置$" manage=off
 
 #END
 # New setting
