--- a/.yabairc
+++ b/.yabairc
@@ -79,3 +79,9 @@ echo "yabai configuration loaded.."
 
 yabai -m rule --add app="^1$"  manage=off
 yabai -m rule --add app!="^1$"  manage=off
+
+# window opacity (default: off)
+# example: render all unfocused windows with 90% opacity
+# yabai -m config window_opacity on
+# yabai -m config active_window_opacity 1.0
+# yabai -m config normal_window_opacity 0.9
